--- a/src/app/modules/main/change-password/change-password.component.html
+++ b/src/app/modules/main/change-password/change-password.component.html
@@ -4,53 +4,29 @@
       <div class="card-body">
         <h5 class="card-title">{{ "login.change_Pass" | translate }}</h5>
         <div>
-          <form >
-            <narik-input
-              prefixIcon="lock"
-              [placeHolder]="'login.old-password' | translate"
-              [(ngModel)]="loginModel.oldPassword"
-              name="password"
-              [label]="'login.old-password' | translate"
-              type="password"
-            >
+          <form>
+            <narik-input prefixIcon="lock" [placeHolder]="'login.old-password' | translate"
+              [(ngModel)]="loginModel.oldPassword" name="password" [label]="'login.old-password' | translate"
+              type="password">
             </narik-input>
 
-            <narik-input
-              prefixIcon="lock"
-              [placeHolder]="'login.password_placeHolder' | translate"
-              [(ngModel)]="loginModel.password"
-              name="password"
-              [label]="'login.password' | translate"
-              type="password"
-            >
+            <narik-input prefixIcon="lock" [placeHolder]="'login.password_placeHolder' | translate"
+              [(ngModel)]="loginModel.password" name="password" [label]="'login.password' | translate" type="password">
             </narik-input>
 
-            <narik-input
-              prefixIcon="lock"
-              [placeHolder]="'login.re-password' | translate"
-              [(ngModel)]="loginModel.rePassword"
-              name="password"
-              [label]="'login.re-password' | translate"
-              type="password"
-            >
+            <narik-input prefixIcon="lock" [placeHolder]="'login.re-password' | translate"
+              [(ngModel)]="loginModel.rePassword" name="password" [label]="'login.re-password' | translate"
+              type="password">
             </narik-input>
           </form>
         </div>
       </div>
       <div align="right" class="pb-1 pr-1">
-        <narik-button
-          (nClick)="doChangePassword()"
-          [isBusy]="isBusy"
-          label=" {{ 'dialog-buttons.ok' | translate }}"
-          color="primary"
-        >
+        <narik-button (nClick)="doChangePassword()" [isBusy]="isBusy" label=" {{ 'dialog-buttons.ok' | translate }}"
+          color="primary" tooltip="asddas" shortcut="control.s">
         </narik-button>
-        <narik-button
-          class="ml-2"
-          (nClick)="dialog.close()"
-          label=" {{ 'dialog-buttons.cancel' | translate }}"
-          color="warn"
-        >
+        <narik-button class="ml-2" (nClick)="dialog.close()" label=" {{ 'dialog-buttons.cancel' | translate }}"
+          color="warn">
         </narik-button>
       </div>
     </div>
