--- a/src/app/modules/admin/main/admin-main.component.html
+++ b/src/app/modules/admin/main/admin-main.component.html
@@ -1,1 +1,2 @@
-<ngx-main-view [menuItems]='menuItems' headerTitle="{{'management' | translate}}" menuHeader="{{'menu' | translate}}"></ngx-main-view>
+<ngx-main-view [menuItems]='menuItems' headerTitle="{{'management' | translate}}" menuHeader="{{'menu' | translate}}">
+</ngx-main-view>
