--- a/src/app/modules/main/change-password/change-password.component.html
+++ b/src/app/modules/main/change-password/change-password.component.html
@@ -23,7 +23,7 @@
       </div>
       <div align="right" class="pb-1 pr-1">
         <narik-button (nClick)="doChangePassword()" [isBusy]="isBusy" label=" {{ 'dialog-buttons.ok' | translate }}"
-          color="primary" tooltip="asddas" shortcut="control.s">
+          color="primary" shortcut="control.s">
         </narik-button>
         <narik-button class="ml-2" (nClick)="dialog.close()" label=" {{ 'dialog-buttons.cancel' | translate }}"
           color="warn">
